--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Ahmed hossam",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.11.4",
     "pusher": "^4.0.2"
